[package]
name = "bmp-client"
version = "0.1.0"
authors = ["Cameron Daniel <cam.daniel@gmail.com>"]
edition = "2018"

[dependencies]
bmp-protocol = { path = "../bmp-protocol" }
chrono = "0.4"
failure = "0.1"
hashbrown = "^0.7"
lazy_static = "1.3"
prometheus = { version = "0.7", features = ["nightly"] }
# prometheus_exporter = "0.3"
rand = "0.6"
tracing = "^0.1"