[package]
name = "bmp-client"
version = "0.1.0"
authors = ["Cameron Daniel <cam.daniel@gmail.com>"]
edition = "2018"

[dependencies]
# bmp-protocol = { path = "../bmp-protocol" }
bmp-protocol = { git = "https://github.com/ccakes/bmp-protocol-rs" }
hashbrown = "^0.7"
prometheus = { version = "0.7", features = ["nightly"] }
# prometheus_exporter = "0.3"
tokio = { version = "^0.2", features = ["tcp"] }
tokio-util = { version = "^0.3", features = ["codec"] }
tracing = "^0.1"

[dev-dependencies]
tokio = { version = "^0.2", features = ["net", "rt-core", "macros"] }