[package]
name = "bmp-client"
version = "0.1.1"
authors = ["Cameron Daniel <cam.daniel@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
keywords = ["bgp", "bmp", "parser"]
categories = ["parsing", "network-programming"]
repository = "https://github.com/ccakes/bmp-client-rs"
homepage = "https://github.com/ccakes/bmp-client-rs"
documentation = "https://docs.rs/bmp-client"


[dependencies]
bmp-protocol = "= 0.1.3"
tokio = { version = "^0.2", features = ["tcp"] }
tokio-util = { version = "^0.3", features = ["codec"] }
tracing = "^0.1"

[dev-dependencies]
tokio = { version = "^0.2", features = ["net", "rt-core", "macros"] }